--- a/index.html
+++ b/index.html
@@ -28,11 +28,10 @@
   <!-- Sisältö -->
   <main>
       <section id="minä" class="profile-section">
-          <img src="images/senja.jpeg" alt="Senja Kantanen" class="profile-image">
           <div class="profile-text">
             <h1>Tervetuloa portfoliooni!</h1>
               <p> Olen Senja Kantanen,
-                  jo reilun puolen välin saavuttanut konetekniikan opiskelija
+                  viimeisen vuoden konetekniikan opiskelija
                   Hämeenlinnasta. Niinkuin nämäkin sivut, täältä voit löytää opintojeni aikaisia töitä ja projekteja kera yhteystietojeni.<br>
                   <br>Olen käytännönläheinen ja kädentaitoinen tekijä, jolla on monipuolinen kokemus erilaisista tehtävistä.
                   Itseopitut taidot yhdistettynä työssä hankittuun kokemukseen ovat tehneet minusta tehokkaan ongelmanratkaisijan, joka nauttii haasteista ja uusien 
