--- a/projektit.html
+++ b/projektit.html
@@ -35,8 +35,12 @@
                 <br><br>Tekninen dokumentaatio: Projektien yhteydessä olen laatinut teknisiä piirustuksia ja raportteja, jotka ovat tärkeä osa insinöörityötä.
                 <br><br>Esimerkkejä: Simulointiharjoituksia, koneiden mekaniikkaa ja erilaisia design-konsepteja, kuten visuaalisesti vaikuttava timanttimalli.
             </p>
-            <p>Tässä on joitakin harjoituksia ja projektejani:</p>
+            <p>Tässä on harjoituksia ja projektejani:</p>
             <div class="gallery">
+                <a href="images/Näyttökuva 2025-08-11 102307.png" target="_blank"><img src="images/Näyttökuva 2025-08-11 102307.png" alt="Project 0"></a>
+                <a href="images/Näyttökuva 2025-08-11 102938.png" target="_blank"><img src="images/Näyttökuva 2025-08-11 102938.png" alt="Project 00"></a>
+                <a href="images/Näyttökuva 2025-08-11 102544.png" target="_blank"><img src="images/Näyttökuva 2025-08-11 102544.png" alt="Project 000"></a>
+                <a href="images/Näyttökuva 2025-08-11 101903.png" target="_blank"><img src="images/Näyttökuva 2025-08-11 101903.png" alt="Project 1"></a>
                 <a href="images/2.png" target="_blank"><img src="images/2.png" alt="Project 2"></a>
                 <a href="images/3.png" target="_blank"><img src="images/3.png" alt="Project 3"></a>
                 <a href="images/4.png" target="_blank"><img src="images/4.png" alt="Project 4"></a>
@@ -45,7 +49,7 @@
                 <a href="images/7.png" target="_blank"><img src="images/7.png" alt="Project 7"></a>
                 <a href="images/8.png" target="_blank"><img src="images/8.png" alt="Project 8"></a>
                 <a href="images/9.png" target="_blank"><img src="images/9.png" alt="Project 9"></a>
-                <a href="images/10.png" target="_blank"><img src="images/10.png" alt="Project 10"></a>
+                <a href="images/Assem1-Design Study 1-1.docx" target="_blank">Kuvaa klikkaamalla raporttiin<img src="images/10.png" alt="Project 10"></a>
             </div>
         </section>
     </main>
